Use variable for z-index, update library to fix CSS syntax issues

--- a/assets/js/src/style.scss
+++ b/assets/js/src/style.scss
@@ -2,10 +2,7 @@
 
 :root {
 	--lightbox-background: rgba( 0, 0, 0, .8 );
-}
-
-.tobii {
-	z-index: 100000; // #wpadminbar uses 99999
+	--lightbox-z-index: 100000; // #wpadminbar uses 99999
 }
 
 .tobii__btn {
